--- a/app/src/main/res/xml/scene.xml
+++ b/app/src/main/res/xml/scene.xml
@@ -1,15 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <MotionScene
-    xmlns:motion="http://schemas.android.com/apk/res-auto">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:motion="http://schemas.android.com/apk/res-auto">
 
     <Transition
-        motion:constraintSetStart="@layout/end_motion"
-        motion:constraintSetEnd="@layout/stat_motion"
-        motion:duration="1000">
+            motion:constraintSetStart="@id/start"
+            motion:constraintSetEnd="@id/end"
+            motion:duration="1000">
         <OnSwipe
-            motion:touchAnchorId="@+id/blue_button"
-            motion:touchAnchorSide="right"
-            motion:dragDirection="dragRight" />
+                motion:touchAnchorId="@+id/blue_button"
+                motion:touchAnchorSide="right"
+                motion:dragDirection="dragRight"/>
     </Transition>
+
+    <ConstraintSet
+            android:id="@+id/start">
+        <Constraint
+                android:id="@+id/blue_button"
+                android:layout_width="@dimen/btn_dimen"
+                android:layout_height="@dimen/btn_dimen"
+                android:layout_marginStart="@dimen/btn_margin"
+                motion:layout_constraintBottom_toBottomOf="parent"
+                motion:layout_constraintStart_toStartOf="parent"
+                motion:layout_constraintTop_toTopOf="parent"/>
+    </ConstraintSet>
+
+    <ConstraintSet android:id="@+id/end">
+        <Constraint
+                android:id="@id/blue_button"
+                android:layout_width="@dimen/btn_dimen"
+                android:layout_height="@dimen/btn_dimen"
+                android:layout_marginEnd="@dimen/btn_margin"
+                motion:layout_constraintBottom_toBottomOf="parent"
+                motion:layout_constraintEnd_toEndOf="parent"
+                motion:layout_constraintTop_toTopOf="parent" />
+    </ConstraintSet>
 
 </MotionScene>
