Add custom color between start ans end

--- a/app/src/main/res/xml/scene.xml
+++ b/app/src/main/res/xml/scene.xml
@@ -22,7 +22,11 @@
                 android:layout_marginStart="@dimen/btn_margin"
                 motion:layout_constraintBottom_toBottomOf="parent"
                 motion:layout_constraintStart_toStartOf="parent"
-                motion:layout_constraintTop_toTopOf="parent"/>
+                motion:layout_constraintTop_toTopOf="parent">
+            <CustomAttribute
+                    motion:attributeName="backgroundColor"
+                    motion:customColorValue="@color/blue"/>
+        </Constraint>
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
@@ -33,7 +37,11 @@
                 android:layout_marginEnd="@dimen/btn_margin"
                 motion:layout_constraintBottom_toBottomOf="parent"
                 motion:layout_constraintEnd_toEndOf="parent"
-                motion:layout_constraintTop_toTopOf="parent" />
+                motion:layout_constraintTop_toTopOf="parent">
+            <CustomAttribute
+                    motion:attributeName="backgroundColor"
+                    motion:customColorValue="@color/light_blue"/>
+        </Constraint>
     </ConstraintSet>
 
 </MotionScene>
