--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="blue">#00007F</color>
+    <color name="light_blue">#9999FF</color>
 </resources>
