--- a/app/src/main/res/xml/scene.xml
+++ b/app/src/main/res/xml/scene.xml
@@ -12,6 +12,12 @@
                 motion:touchAnchorSide="right"
                 motion:dragDirection="dragRight"/>
         <KeyFrameSet>
+            <KeyAttribute
+                    android:scaleX="2"
+                    android:scaleY="2"
+                    android:rotation="-45"
+                    motion:framePosition="50"
+                    motion:target="@id/blue_button"/>
             <KeyPosition
                     motion:keyPositionType="parentRelative"
                     motion:percentY="0.75"
