--- a/app/src/main/res/layout/coordinatorlayout_header.xml
+++ b/app/src/main/res/layout/coordinatorlayout_header.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.alexandre.testmotion.CollapsibleToolbar
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/motionLayout"
+    app:layoutDescription="@xml/scene_coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:minHeight="50dp"
-    android:background="#1e376b"
+    android:fitsSystemWindows="false"
     app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed">
 
     <ImageView
@@ -14,9 +16,7 @@
         android:layout_height="200dp"
         android:background="@color/colorAccent"
         android:scaleType="centerCrop"
-        android:src="@drawable/monterey"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@null"/>
+        android:src="@drawable/monterey"/>
 
     <TextView
         android:id="@+id/label"
@@ -26,23 +26,6 @@
         android:transformPivotY="0dp"
         android:text="@string/monterey"
         android:textColor="#FFF"
-        android:textSize="32sp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="8dp"/>
+        android:textSize="32sp" />
 
-    <TextView
-        android:id="@+id/sublabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/california"
-        android:textColor="#FFF"
-        android:textSize="24sp"
-        app:fontFamily="cursive"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-</android.support.constraint.ConstraintLayout>
+</com.alexandre.testmotion.CollapsibleToolbar>
