--- a/app/src/main/res/layout/coordinator_activity.xml
+++ b/app/src/main/res/layout/coordinator_activity.xml
@@ -1,22 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/content"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="false"
-    android:background="@android:color/white">
-
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/app_bar"
+<android.support.v4.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/app_bar_height"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="match_parent"
+        android:id="@+id/motionLayout"
+        android:background="@color/colorPrimaryDark">
 
-        <include layout="@layout/coordinatorlayout_header"/>
+    <com.alexandre.testmotion.DrawerContent
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutDescription="@xml/scene_drawer_content">
 
-    </android.support.design.widget.AppBarLayout>
+        <android.support.design.widget.CoordinatorLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="false"
+                android:background="@android:color/white">
 
-    <include layout="@layout/content_scrolling" />
+            <android.support.design.widget.AppBarLayout
+                    android:id="@+id/app_bar"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/app_bar_height"
+                    android:theme="@style/AppTheme.AppBarOverlay">
 
-</android.support.design.widget.CoordinatorLayout>
+                <include layout="@layout/coordinatorlayout_header"/>
+
+            </android.support.design.widget.AppBarLayout>
+
+            <include layout="@layout/content_scrolling"/>
+
+        </android.support.design.widget.CoordinatorLayout>
+    </com.alexandre.testmotion.DrawerContent>
+
+    <include layout="@layout/drawerlayout_menu"/>
+
+</android.support.v4.widget.DrawerLayout>
